# Event-Coincident-Analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  eca.rst  index.rst
eca/: __init__.py  __main__.py  config.py  dateparser.py  eca.py  normalizer.py  sources.py  timestamp.py
tests/: f1  f2
tests/config/: conf1.yaml
tests/jenkins/: config.yaml
tests/t1/: config.yaml
tests/t2/: config.yaml
tests/t3/: config.yaml  errors  test_generated_cases.py
