[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "event-coincident-analysis"
version = "0.0.1"
authors = [
  { name="Lars Berntzon", email="lars.berntzon@cecilia-data.se" },
]
description = "Python project for correlating date/time events listed in two files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lboclboc/Event-Coincident-Analysis"
"Bug Tracker" = "https://github.com/lboclboc/Event-Coincident-Analysis/issues"

[project.scripts]
eca = "eca.__main__:main"
